parser.automaton
State 0:
fichier' -> . fichier [ # ]
-- On VOID shift to state 1
-- On TIDENT shift to state 2
-- On INT shift to state 5
-- On INCLUDEIOS shift to state 25
-- On CLASS shift to state 26
-- On typ shift to state 28
-- On proto shift to state 48
-- On list(decl) shift to state 212
-- On fichier shift to state 214
-- On decl_vars shift to state 182
-- On decl_class shift to state 183
-- On decl shift to state 184
-- On debut_decl_class shift to state 186
-- On EOF reduce production list(decl) -> 

State 1:
typ -> VOID . [ TIMES TIDENT LAND IDENT ]
-- On TIMES reduce production typ -> VOID 
-- On TIDENT reduce production typ -> VOID 
-- On LAND reduce production typ -> VOID 
-- On IDENT reduce production typ -> VOID 

State 2:
proto -> TIDENT . LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
proto -> TIDENT . COLON COLON TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
typ -> TIDENT . [ TIMES TIDENT LAND IDENT ]
-- On LPAR shift to state 3
-- On COLON shift to state 19
-- On TIMES reduce production typ -> TIDENT 
-- On TIDENT reduce production typ -> TIDENT 
-- On LAND reduce production typ -> TIDENT 
-- On IDENT reduce production typ -> TIDENT 

State 3:
proto -> TIDENT LPAR . loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
-- On VOID shift to state 1
-- On TIDENT shift to state 4
-- On INT shift to state 5
-- On typ shift to state 6
-- On separated_nonempty_list(COMMA,argument) shift to state 13
-- On loption(separated_nonempty_list(COMMA,argument)) shift to state 14
-- On argument shift to state 16
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,argument)) -> 

State 4:
typ -> TIDENT . [ TIMES LAND IDENT ]
-- On TIMES reduce production typ -> TIDENT 
-- On LAND reduce production typ -> TIDENT 
-- On IDENT reduce production typ -> TIDENT 

State 5:
typ -> INT . [ TIMES TIDENT LAND IDENT ]
-- On TIMES reduce production typ -> INT 
-- On TIDENT reduce production typ -> INT 
-- On LAND reduce production typ -> INT 
-- On IDENT reduce production typ -> INT 

State 6:
argument -> typ . var [ RPAR COMMA ]
-- On TIMES shift to state 7
-- On LAND shift to state 8
-- On IDENT shift to state 9
-- On var shift to state 12

State 7:
var -> TIMES . var [ SEMICOLON RPAR COMMA ASSIGN ]
-- On TIMES shift to state 7
-- On LAND shift to state 8
-- On IDENT shift to state 9
-- On var shift to state 11

State 8:
var -> LAND . var [ SEMICOLON RPAR COMMA ASSIGN ]
-- On TIMES shift to state 7
-- On LAND shift to state 8
-- On IDENT shift to state 9
-- On var shift to state 10

State 9:
var -> IDENT . [ SEMICOLON RPAR COMMA ASSIGN ]
-- On SEMICOLON reduce production var -> IDENT 
-- On RPAR reduce production var -> IDENT 
-- On COMMA reduce production var -> IDENT 
-- On ASSIGN reduce production var -> IDENT 

State 10:
var -> LAND var . [ SEMICOLON RPAR COMMA ASSIGN ]
-- On SEMICOLON reduce production var -> LAND var 
-- On RPAR reduce production var -> LAND var 
-- On COMMA reduce production var -> LAND var 
-- On ASSIGN reduce production var -> LAND var 

State 11:
var -> TIMES var . [ SEMICOLON RPAR COMMA ASSIGN ]
-- On SEMICOLON reduce production var -> TIMES var 
-- On RPAR reduce production var -> TIMES var 
-- On COMMA reduce production var -> TIMES var 
-- On ASSIGN reduce production var -> TIMES var 

State 12:
argument -> typ var . [ RPAR COMMA ]
-- On RPAR reduce production argument -> typ var 
-- On COMMA reduce production argument -> typ var 

State 13:
loption(separated_nonempty_list(COMMA,argument)) -> separated_nonempty_list(COMMA,argument) . [ RPAR ]
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,argument)) -> separated_nonempty_list(COMMA,argument) 

State 14:
proto -> TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) . RPAR [ SEMICOLON LACC ]
-- On RPAR shift to state 15

State 15:
proto -> TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR . [ SEMICOLON LACC ]
-- On SEMICOLON reduce production proto -> TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR 
-- On LACC reduce production proto -> TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR 

State 16:
separated_nonempty_list(COMMA,argument) -> argument . [ RPAR ]
separated_nonempty_list(COMMA,argument) -> argument . COMMA separated_nonempty_list(COMMA,argument) [ RPAR ]
-- On COMMA shift to state 17
-- On RPAR reduce production separated_nonempty_list(COMMA,argument) -> argument 

State 17:
separated_nonempty_list(COMMA,argument) -> argument COMMA . separated_nonempty_list(COMMA,argument) [ RPAR ]
-- On VOID shift to state 1
-- On TIDENT shift to state 4
-- On INT shift to state 5
-- On typ shift to state 6
-- On separated_nonempty_list(COMMA,argument) shift to state 18
-- On argument shift to state 16

State 18:
separated_nonempty_list(COMMA,argument) -> argument COMMA separated_nonempty_list(COMMA,argument) . [ RPAR ]
-- On RPAR reduce production separated_nonempty_list(COMMA,argument) -> argument COMMA separated_nonempty_list(COMMA,argument) 

State 19:
proto -> TIDENT COLON . COLON TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
-- On COLON shift to state 20

State 20:
proto -> TIDENT COLON COLON . TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
-- On TIDENT shift to state 21

State 21:
proto -> TIDENT COLON COLON TIDENT . LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
-- On LPAR shift to state 22

State 22:
proto -> TIDENT COLON COLON TIDENT LPAR . loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
-- On VOID shift to state 1
-- On TIDENT shift to state 4
-- On INT shift to state 5
-- On typ shift to state 6
-- On separated_nonempty_list(COMMA,argument) shift to state 13
-- On loption(separated_nonempty_list(COMMA,argument)) shift to state 23
-- On argument shift to state 16
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,argument)) -> 

State 23:
proto -> TIDENT COLON COLON TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) . RPAR [ SEMICOLON LACC ]
-- On RPAR shift to state 24

State 24:
proto -> TIDENT COLON COLON TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR . [ SEMICOLON LACC ]
-- On SEMICOLON reduce production proto -> TIDENT COLON COLON TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR 
-- On LACC reduce production proto -> TIDENT COLON COLON TIDENT LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR 

State 25:
fichier -> INCLUDEIOS . list(decl) EOF [ # ]
-- On VOID shift to state 1
-- On TIDENT shift to state 2
-- On INT shift to state 5
-- On CLASS shift to state 26
-- On typ shift to state 28
-- On proto shift to state 48
-- On list(decl) shift to state 180
-- On decl_vars shift to state 182
-- On decl_class shift to state 183
-- On decl shift to state 184
-- On debut_decl_class shift to state 186
-- On EOF reduce production list(decl) -> 

State 26:
debut_decl_class -> CLASS . IDENT [ LACC COLON ]
-- On IDENT shift to state 27

State 27:
debut_decl_class -> CLASS IDENT . [ LACC COLON ]
-- On LACC reduce production debut_decl_class -> CLASS IDENT 
-- On COLON reduce production debut_decl_class -> CLASS IDENT 

State 28:
decl_vars -> typ . separated_nonempty_list(COMMA,var) SEMICOLON [ VOID VIRTUAL TIDENT RACC INT EOF CLASS ]
proto -> typ . qvar LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
-- On TIMES shift to state 29
-- On TIDENT shift to state 30
-- On LAND shift to state 34
-- On IDENT shift to state 35
-- On var shift to state 39
-- On separated_nonempty_list(COMMA,var) shift to state 42
-- On qvar shift to state 44
-- On qident shift to state 37

State 29:
qvar -> TIMES . qvar [ LPAR ]
var -> TIMES . var [ SEMICOLON COMMA ]
-- On TIMES shift to state 29
-- On TIDENT shift to state 30
-- On LAND shift to state 34
-- On IDENT shift to state 35
-- On var shift to state 11
-- On qvar shift to state 38
-- On qident shift to state 37

State 30:
qident -> TIDENT . COLON COLON IDENT [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On COLON shift to state 31

State 31:
qident -> TIDENT COLON . COLON IDENT [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On COLON shift to state 32

State 32:
qident -> TIDENT COLON COLON . IDENT [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On IDENT shift to state 33

State 33:
qident -> TIDENT COLON COLON IDENT . [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On TIMES reduce production qident -> TIDENT COLON COLON IDENT 
-- On SEMICOLON reduce production qident -> TIDENT COLON COLON IDENT 
-- On SDEREF reduce production qident -> TIDENT COLON COLON IDENT 
-- On RPAR reduce production qident -> TIDENT COLON COLON IDENT 
-- On PLUS reduce production qident -> TIDENT COLON COLON IDENT 
-- On OR reduce production qident -> TIDENT COLON COLON IDENT 
-- On NEQ reduce production qident -> TIDENT COLON COLON IDENT 
-- On MODULO reduce production qident -> TIDENT COLON COLON IDENT 
-- On MINUS reduce production qident -> TIDENT COLON COLON IDENT 
-- On LT reduce production qident -> TIDENT COLON COLON IDENT 
-- On LPAR reduce production qident -> TIDENT COLON COLON IDENT 
-- On LE reduce production qident -> TIDENT COLON COLON IDENT 
-- On INCR reduce production qident -> TIDENT COLON COLON IDENT 
-- On GT reduce production qident -> TIDENT COLON COLON IDENT 
-- On GE reduce production qident -> TIDENT COLON COLON IDENT 
-- On EQ reduce production qident -> TIDENT COLON COLON IDENT 
-- On DOT reduce production qident -> TIDENT COLON COLON IDENT 
-- On DIV reduce production qident -> TIDENT COLON COLON IDENT 
-- On DECR reduce production qident -> TIDENT COLON COLON IDENT 
-- On COMMA reduce production qident -> TIDENT COLON COLON IDENT 
-- On CHEVRON reduce production qident -> TIDENT COLON COLON IDENT 
-- On ASSIGN reduce production qident -> TIDENT COLON COLON IDENT 
-- On AND reduce production qident -> TIDENT COLON COLON IDENT 

State 34:
qvar -> LAND . qvar [ LPAR ]
var -> LAND . var [ SEMICOLON COMMA ]
-- On TIMES shift to state 29
-- On TIDENT shift to state 30
-- On LAND shift to state 34
-- On IDENT shift to state 35
-- On var shift to state 10
-- On qvar shift to state 36
-- On qident shift to state 37

State 35:
qident -> IDENT . [ LPAR ]
var -> IDENT . [ SEMICOLON COMMA ]
-- On SEMICOLON reduce production var -> IDENT 
-- On LPAR reduce production qident -> IDENT 
-- On COMMA reduce production var -> IDENT 

State 36:
qvar -> LAND qvar . [ LPAR ]
-- On LPAR reduce production qvar -> LAND qvar 

State 37:
qvar -> qident . [ LPAR ]
-- On LPAR reduce production qvar -> qident 

State 38:
qvar -> TIMES qvar . [ LPAR ]
-- On LPAR reduce production qvar -> TIMES qvar 

State 39:
separated_nonempty_list(COMMA,var) -> var . [ SEMICOLON ]
separated_nonempty_list(COMMA,var) -> var . COMMA separated_nonempty_list(COMMA,var) [ SEMICOLON ]
-- On COMMA shift to state 40
-- On SEMICOLON reduce production separated_nonempty_list(COMMA,var) -> var 

State 40:
separated_nonempty_list(COMMA,var) -> var COMMA . separated_nonempty_list(COMMA,var) [ SEMICOLON ]
-- On TIMES shift to state 7
-- On LAND shift to state 8
-- On IDENT shift to state 9
-- On var shift to state 39
-- On separated_nonempty_list(COMMA,var) shift to state 41

State 41:
separated_nonempty_list(COMMA,var) -> var COMMA separated_nonempty_list(COMMA,var) . [ SEMICOLON ]
-- On SEMICOLON reduce production separated_nonempty_list(COMMA,var) -> var COMMA separated_nonempty_list(COMMA,var) 

State 42:
decl_vars -> typ separated_nonempty_list(COMMA,var) . SEMICOLON [ VOID VIRTUAL TIDENT RACC INT EOF CLASS ]
-- On SEMICOLON shift to state 43

State 43:
decl_vars -> typ separated_nonempty_list(COMMA,var) SEMICOLON . [ VOID VIRTUAL TIDENT RACC INT EOF CLASS ]
-- On VOID reduce production decl_vars -> typ separated_nonempty_list(COMMA,var) SEMICOLON 
-- On VIRTUAL reduce production decl_vars -> typ separated_nonempty_list(COMMA,var) SEMICOLON 
-- On TIDENT reduce production decl_vars -> typ separated_nonempty_list(COMMA,var) SEMICOLON 
-- On RACC reduce production decl_vars -> typ separated_nonempty_list(COMMA,var) SEMICOLON 
-- On INT reduce production decl_vars -> typ separated_nonempty_list(COMMA,var) SEMICOLON 
-- On EOF reduce production decl_vars -> typ separated_nonempty_list(COMMA,var) SEMICOLON 
-- On CLASS reduce production decl_vars -> typ separated_nonempty_list(COMMA,var) SEMICOLON 

State 44:
proto -> typ qvar . LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
-- On LPAR shift to state 45

State 45:
proto -> typ qvar LPAR . loption(separated_nonempty_list(COMMA,argument)) RPAR [ SEMICOLON LACC ]
-- On VOID shift to state 1
-- On TIDENT shift to state 4
-- On INT shift to state 5
-- On typ shift to state 6
-- On separated_nonempty_list(COMMA,argument) shift to state 13
-- On loption(separated_nonempty_list(COMMA,argument)) shift to state 46
-- On argument shift to state 16
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,argument)) -> 

State 46:
proto -> typ qvar LPAR loption(separated_nonempty_list(COMMA,argument)) . RPAR [ SEMICOLON LACC ]
-- On RPAR shift to state 47

State 47:
proto -> typ qvar LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR . [ SEMICOLON LACC ]
-- On SEMICOLON reduce production proto -> typ qvar LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR 
-- On LACC reduce production proto -> typ qvar LPAR loption(separated_nonempty_list(COMMA,argument)) RPAR 

State 48:
decl -> proto . bloc [ VOID TIDENT INT EOF CLASS ]
-- On LACC shift to state 49
-- On bloc shift to state 179

State 49:
bloc -> LACC . list(inst) RACC [ WHILE VOID TRUE TIMES TIDENT THIS STDCOUT SEMICOLON RETURN RACC PLUS NULL NOT NEW MINUS LPAR LAND LACC INTEGER INT INCR IF IDENT FOR FALSE EOF ELSE DECR CLASS ]
-- On WHILE shift to state 50
-- On VOID shift to state 1
-- On TRUE shift to state 52
-- On TIMES shift to state 53
-- On TIDENT shift to state 125
-- On THIS shift to state 54
-- On STDCOUT shift to state 126
-- On SEMICOLON shift to state 135
-- On RETURN shift to state 136
-- On PLUS shift to state 55
-- On NULL shift to state 56
-- On NOT shift to state 57
-- On NEW shift to state 58
-- On MINUS shift to state 61
-- On LPAR shift to state 62
-- On LAND shift to state 63
-- On LACC shift to state 49
-- On INTEGER shift to state 64
-- On INT shift to state 5
-- On INCR shift to state 65
-- On IF shift to state 140
-- On IDENT shift to state 66
-- On FOR shift to state 144
-- On FALSE shift to state 67
-- On DECR shift to state 68
-- On typ shift to state 151
-- On qident shift to state 69
-- On list(inst) shift to state 175
-- On inst shift to state 177
-- On expr shift to state 163
-- On dexpr shift to state 84
-- On bloc shift to state 165
-- On RACC reduce production list(inst) -> 

State 50:
inst -> WHILE . LPAR expr RPAR inst [ WHILE VOID TRUE TIMES TIDENT THIS STDCOUT SEMICOLON RETURN RACC PLUS NULL NOT NEW MINUS LPAR LAND LACC INTEGER INT INCR IF IDENT FOR FALSE ELSE DECR ]
-- On LPAR shift to state 51

State 51:
inst -> WHILE LPAR . expr RPAR inst [ WHILE VOID TRUE TIMES TIDENT THIS STDCOUT SEMICOLON RETURN RACC PLUS NULL NOT NEW MINUS LPAR LAND LACC INTEGER INT INCR IF IDENT FOR FALSE ELSE DECR ]
-- On TRUE shift to state 52
-- On TIMES shift to state 53
-- On TIDENT shift to state 30
-- On THIS shift to state 54
-- On PLUS shift to state 55
-- On NULL shift to state 56
-- On NOT shift to state 57
-- On NEW shift to state 58
-- On MINUS shift to state 61
-- On LPAR shift to state 62
-- On LAND shift to state 63
-- On INTEGER shift to state 64
-- On INCR shift to state 65
-- On IDENT shift to state 66
-- On FALSE shift to state 67
-- On DECR shift to state 68
-- On qident shift to state 69
-- On expr shift to state 123
-- On dexpr shift to state 84

State 52:
dexpr -> TRUE . [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On TIMES reduce production dexpr -> TRUE 
-- On SEMICOLON reduce production dexpr -> TRUE 
-- On SDEREF reduce production dexpr -> TRUE 
-- On RPAR reduce production dexpr -> TRUE 
-- On PLUS reduce production dexpr -> TRUE 
-- On OR reduce production dexpr -> TRUE 
-- On NEQ reduce production dexpr -> TRUE 
-- On MODULO reduce production dexpr -> TRUE 
-- On MINUS reduce production dexpr -> TRUE 
-- On LT reduce production dexpr -> TRUE 
-- On LPAR reduce production dexpr -> TRUE 
-- On LE reduce production dexpr -> TRUE 
-- On INCR reduce production dexpr -> TRUE 
-- On GT reduce production dexpr -> TRUE 
-- On GE reduce production dexpr -> TRUE 
-- On EQ reduce production dexpr -> TRUE 
-- On DOT reduce production dexpr -> TRUE 
-- On DIV reduce production dexpr -> TRUE 
-- On DECR reduce production dexpr -> TRUE 
-- On COMMA reduce production dexpr -> TRUE 
-- On CHEVRON reduce production dexpr -> TRUE 
-- On ASSIGN reduce production dexpr -> TRUE 
-- On AND reduce production dexpr -> TRUE 

State 53:
dexpr -> TIMES . expr [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On TRUE shift to state 52
-- On TIMES shift to state 53
-- On TIDENT shift to state 30
-- On THIS shift to state 54
-- On PLUS shift to state 55
-- On NULL shift to state 56
-- On NOT shift to state 57
-- On NEW shift to state 58
-- On MINUS shift to state 61
-- On LPAR shift to state 62
-- On LAND shift to state 63
-- On INTEGER shift to state 64
-- On INCR shift to state 65
-- On IDENT shift to state 66
-- On FALSE shift to state 67
-- On DECR shift to state 68
-- On qident shift to state 69
-- On expr shift to state 122
-- On dexpr shift to state 84

State 54:
dexpr -> THIS . [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On TIMES reduce production dexpr -> THIS 
-- On SEMICOLON reduce production dexpr -> THIS 
-- On SDEREF reduce production dexpr -> THIS 
-- On RPAR reduce production dexpr -> THIS 
-- On PLUS reduce production dexpr -> THIS 
-- On OR reduce production dexpr -> THIS 
-- On NEQ reduce production dexpr -> THIS 
-- On MODULO reduce production dexpr -> THIS 
-- On MINUS reduce production dexpr -> THIS 
-- On LT reduce production dexpr -> THIS 
-- On LPAR reduce production dexpr -> THIS 
-- On LE reduce production dexpr -> THIS 
-- On INCR reduce production dexpr -> THIS 
-- On GT reduce production dexpr -> THIS 
-- On GE reduce production dexpr -> THIS 
-- On EQ reduce production dexpr -> THIS 
-- On DOT reduce production dexpr -> THIS 
-- On DIV reduce production dexpr -> THIS 
-- On DECR reduce production dexpr -> THIS 
-- On COMMA reduce production dexpr -> THIS 
-- On CHEVRON reduce production dexpr -> THIS 
-- On ASSIGN reduce production dexpr -> THIS 
-- On AND reduce production dexpr -> THIS 

State 55:
dexpr -> PLUS . expr [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On TRUE shift to state 52
-- On TIMES shift to state 53
-- On TIDENT shift to state 30
-- On THIS shift to state 54
-- On PLUS shift to state 55
-- On NULL shift to state 56
-- On NOT shift to state 57
-- On NEW shift to state 58
-- On MINUS shift to state 61
-- On LPAR shift to state 62
-- On LAND shift to state 63
-- On INTEGER shift to state 64
-- On INCR shift to state 65
-- On IDENT shift to state 66
-- On FALSE shift to state 67
-- On DECR shift to state 68
-- On qident shift to state 69
-- On expr shift to state 121
-- On dexpr shift to state 84

State 56:
dexpr -> NULL . [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On TIMES reduce production dexpr -> NULL 
-- On SEMICOLON reduce production dexpr -> NULL 
-- On SDEREF reduce production dexpr -> NULL 
-- On RPAR reduce production dexpr -> NULL 
-- On PLUS reduce production dexpr -> NULL 
-- On OR reduce production dexpr -> NULL 
-- On NEQ reduce production dexpr -> NULL 
-- On MODULO reduce production dexpr -> NULL 
-- On MINUS reduce production dexpr -> NULL 
-- On LT reduce production dexpr -> NULL 
-- On LPAR reduce production dexpr -> NULL 
-- On LE reduce production dexpr -> NULL 
-- On INCR reduce production dexpr -> NULL 
-- On GT reduce production dexpr -> NULL 
-- On GE reduce production dexpr -> NULL 
-- On EQ reduce production dexpr -> NULL 
-- On DOT reduce production dexpr -> NULL 
-- On DIV reduce production dexpr -> NULL 
-- On DECR reduce production dexpr -> NULL 
-- On COMMA reduce production dexpr -> NULL 
-- On CHEVRON reduce production dexpr -> NULL 
-- On ASSIGN reduce production dexpr -> NULL 
-- On AND reduce production dexpr -> NULL 

State 57:
dexpr -> NOT . expr [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On TRUE shift to state 52
-- On TIMES shift to state 53
-- On TIDENT shift to state 30
-- On THIS shift to state 54
-- On PLUS shift to state 55
-- On NULL shift to state 56
-- On NOT shift to state 57
-- On NEW shift to state 58
-- On MINUS shift to state 61
-- On LPAR shift to state 62
-- On LAND shift to state 63
-- On INTEGER shift to state 64
-- On INCR shift to state 65
-- On IDENT shift to state 66
-- On FALSE shift to state 67
-- On DECR shift to state 68
-- On qident shift to state 69
-- On expr shift to state 120
-- On dexpr shift to state 84

State 58:
dexpr -> NEW . TIDENT LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR [ TIMES SEMICOLON SDEREF RPAR PLUS OR NEQ MODULO MINUS LT LPAR LE INCR GT GE EQ DOT DIV DECR COMMA CHEVRON ASSIGN AND ]
-- On TIDENT shift to state 59
